--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,26 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap');
+
+body {
+  background: image_url('background-chess.png');
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 26px;
+}
+
+.navbar {
+  background: image_url('navbar-image.png');
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
+
+.navbar-inverse .navbar-brand {
+  color: #045B6C;
+  font-family: 'Fredericka the Great', cursive;
+  font-size:35px;
+}
+
+.navbar-collapse .nav-link {
+  color: #045B6C;
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 20px;
+}
+
