--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
+#start {
+  color: #045B6C;
+  font-family: 'Fredericka the Great', cursive; 
+  font-size: 40px;
+}
+
+#choose {
+  color: #045B6C;
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 30px;
+}
