--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
             <a class="nav-link" href="#">How To Play</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Games</a>
+            <%= link_to 'Games', new_game_path, class: 'nav-link' %>
           </li>
         </ul>
             <ul class="navbar-nav">
