updated views and controllers

--- a/app/views/pawn_stars/index.html.erb
+++ b/app/views/pawn_stars/index.html.erb
@@ -1,1 +1,9 @@
-<h1>A chess app for people who want to play a less serious game. Checkmate!</h1>
+<br />
+<div class="booyah-box col-12">
+  <h1>
+    Welcome to the Pawn Stars chess app. 
+  </h1>
+  <p>
+    One doesn't have to play well, it's enough to play better than your opponent! Checkmate?
+  </p>
+</div>
