--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,3 +11,35 @@
   </div>
   <div class="clear"></div>
 </div>
+
+  <div class="container">
+    <div class="booyah-box row">
+      <div class= "col-lg-2 offset-3">
+        <h4>WINS</h4>
+      </div>
+      <div class= "col-lg-2">
+        <h4>LOSSES</h4>
+      </div>
+      <div class= "col-lg-2">
+        <h4>DRAWS</h4>
+      </div>
+    </div>
+  </div>
+    
+  </center>
+</div>
+
+<br />
+<br />
+<div class="booyah-box">
+  <center>
+    <div class= "col-md-6">
+      <h3>Current Games</h3>
+    </div>
+<br />
+<br />
+    <div class="col-md-6">
+      <h3>Completed Games</h3>
+    </div>
+  </center>
+</div>
