--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -6,11 +6,11 @@
     <div class="container">
       <h3 class="text-center" id="choose">Choose your fate:</h3>
         <div class="image">
-          <%= simple_form_for(@game, url: new_game_path) do |f| %>
+          <%= simple_form_for(@game, url: games_path) do |f| %>
             <%= f.input :white_player_id, as: :hidden, :input_html => { :value => current_user.id } %>
             <%= f.submit "White Player", :type => :image, :src => image_path("whiteking.png"), height: '350', width: '350', class: 'btn btn-primary' %>
           <% end %>
-          <%= simple_form_for(@game, url: new_game_path) do |f| %>
+          <%= simple_form_for(@game, url: games_path) do |f| %>
             <%= f.input :black_player_id, as: :hidden, :input_html => { :value => current_user.id } %>
             <%= f.submit "Black Player", :type => :image, :src => image_path("blackking.png"), height: '350', width: '350', class: 'btn btn-primary' %>
           <% end %>
