--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
             <%= link_to 'Games', new_game_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Chat', conversations_path, class: 'nav-link' %>
+            <%= link_to 'Chat', new_conversation_path, class: 'nav-link' %>
           </li>
         </ul>
             <ul class="navbar-nav">
