--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <%= link_to 'Home', root_path, class: 'nav-link' %> 
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">How To Play</a>
@@ -45,10 +45,10 @@
             <%= link_to 'Games', new_game_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Chat', new_conversation_path, class: 'nav-link' %>
+            <%= link_to 'Chat', users_path, class: 'nav-link' %>
           </li>
         </ul>
-            <ul class="navbar-nav">
+        <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item">
           <%= link_to 'My Profile', user_path(current_user), class: 'nav-link' %>
