--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,7 +23,7 @@
                 <td><%= index +=1 %></td>
                 <td><%= user.name %></td>
                 <td>
-                  <%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
+                  <%= link_to "Send Message", "#", class: "btn btn-success start-conversation",
                               "data-sid" => current_user.id, "data-rip" => user.id %>
                 </td>
               </tr>
