--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,9 @@
           <li class="nav-item">
             <%= link_to 'Games', new_game_path, class: 'nav-link' %>
           </li>
+          <li class="nav-item">
+            <%= link_to 'Chat', chat_rooms_path, class: 'nav-link' %>
+          </li>
         </ul>
             <ul class="navbar-nav">
       <% if user_signed_in? %>
