--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,5 +1,5 @@
 <h2 class="text-center">
-<%= chat_room.title %>
+<%= @chat_room %>
 <br/>
 <small>
 <%= link_to 'Back', chat_rooms_path, class: 'btn btn-primary btn-sx' %>
